fix: add overflow x hidden for featured house

--- a/sass/_featured-house-section.scss
+++ b/sass/_featured-house-section.scss
@@ -1,7 +1,7 @@
 @use "base" as *;
 
 .featured-house {
-  // overflow-x: hidden;
+  overflow-x: hidden;
   min-height: 66.5rem;
 
   &__top {
